厂房增加上传图片、负责人列。独立出一个简单上传模块。

--- a/EmpInfo/Views/Apply/GetMyAuditingList.cshtml
+++ b/EmpInfo/Views/Apply/GetMyAuditingList.cshtml
@@ -27,7 +27,7 @@
             mobileResponsive: true,
             pagination: true,
             search: true,
-            searchOnEnterKey: true,
+            //searchOnEnterKey: true,
             rowStyle:function(){
                 return {
                     css: {"cursor":"pointer"}
