后勤收支模块独立出来，并增加一些统计类别

--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -189,6 +189,13 @@
             </div>
 
             <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Others/DormFeeReport")">
+                    <img src="@Url.Content("~/Content/images/fee_report.png")" class="center-block" />
+                    <p class="text-center">宿舍收支统计</p>
+                </a>
+            </div>
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=DE")">
                     <img src="@Url.Content("~/Content/images/de.png")" class="center-block" />
                     <p class="text-center">后勤工程支出</p>
