--- a/EmpInfo/Views/Others/DSIndex.cshtml
+++ b/EmpInfo/Views/Others/DSIndex.cshtml
@@ -80,6 +80,9 @@
                     }, {
                         field: "dep_size",
                         title: "车间面积"
+                    }, {
+                        field: "is_empty",
+                        title: "闲置"
                     },
                     {
                         field: "clear_level",
@@ -89,11 +92,11 @@
                         field: "dep_charger",
                         title: "负责人"
                     }, {
+                        field: "usage",
+                        title: "生产工序"
+                    }, {
                         field: "dep_plan",
                         title: "车间整合规划"
-                    }, {
-                        field: "usage",
-                        title: "用途"
                     }, {
                         field: "pic_name",
                         title: "平面图",
@@ -242,6 +245,11 @@
                 if (!utils.testIsInt(obj.dep_size)) {
                     toastr.error("车间面积必须为整数，保存失败");
                 }
+                if (obj.is_empty == "是") {
+                    obj.is_empty = true;
+                } else {
+                    obj.is_empty = false;
+                }
                 console.log(obj);
                 $.post("SaveDsDetail", { obj: JSON.stringify(obj) }, function (data) {
                     if (data.suc) {
@@ -387,9 +395,10 @@
                         <input type="text" class="form-control" name="dep_name" placeholder="部门，必填" style="margin-top:4px;" />
                         <input type="text" class="form-control" name="dep_size" placeholder="车间面积，必填" style="margin-top:4px;" />
                         <input type="text" class="form-control" name="clear_level" placeholder="净房等级，必填" style="margin-top:4px;" />
+                        <input type="text" class="form-control" name="is_empty" placeholder="是否闲置" style="margin-top:4px;" />
                         <input type="text" class="form-control" name="dep_charger" placeholder="负责人，选填" style="margin-top:4px;" />
+                        <textarea class="form-control" rows="2" name="usage" placeholder="生产工序，选填" style="margin-top:4px;"></textarea>
                         <textarea class="form-control" rows="2" name="dep_plan" placeholder="车间整合规划，选填" style="margin-top:4px;"></textarea>
-                        <textarea class="form-control" rows="2" name="usage" placeholder="用途，选填" style="margin-top:4px;"></textarea>
                     </form>
                 </div>
                 <div class="modal-footer">
